[gd_scene load_steps=10 format=3 uid="uid://bsu5rhajkv0gn"]

[ext_resource type="Script" path="res://NodeChat/graphe/script/graphe_map.gd" id="1_upfwo"]
[ext_resource type="PackedScene" uid="uid://6833284xwo4p" path="res://NodeChat/graphe/tscn/graph.tscn" id="2_q4deu"]
[ext_resource type="PackedScene" uid="uid://b258smdmrfieh" path="res://NodeChat/graphe/tscn/node_select_pop.tscn" id="2_s8qs1"]
[ext_resource type="PackedScene" uid="uid://c0cdcos0cxgfu" path="res://autoload/iirose/demo/login.tscn" id="3_o12v6"]
[ext_resource type="PackedScene" uid="uid://dnv0vhp5xfvvy" path="res://autoload/iirose/demo/message_sent.tscn" id="4_5aw54"]
[ext_resource type="PackedScene" uid="uid://b1ygjrriksm5v" path="res://NodeChat/message_debug_driver/tscn/debug_window.tscn" id="6_p231i"]

[sub_resource type="Theme" id="Theme_l4lde"]
PopupMenu/font_sizes/font_size = 30

[sub_resource type="Gradient" id="Gradient_qragy"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r0wvn"]
gradient = SubResource("Gradient_qragy")
width = 30
height = 30

[node name="GrapheMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_upfwo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.203922, 0.203922, 0.203922, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 0

[node name="Nodeset" type="MenuButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme = SubResource("Theme_l4lde")
text = "节点集"
flat = false
item_count = 4
popup/item_0/text = "打开文件"
popup/item_1/text = "保存文件"
popup/item_1/id = 1
popup/item_2/text = "另存为"
popup/item_2/id = 2
popup/item_3/text = "关闭文件"
popup/item_3/id = 3

[node name="editor" type="MenuButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "编辑器"
flat = false

[node name="doc" type="MenuButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "文档"
flat = false

[node name="file_name" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "(*)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="debug" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "调试"

[node name="mes" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "消息
"

[node name="online_message" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 8
icon = SubResource("GradientTexture2D_r0wvn")

[node name="GraphEdit" parent="VBoxContainer" instance=ExtResource("2_q4deu")]
layout_mode = 2

[node name="PopupPanel" parent="." instance=ExtResource("2_s8qs1")]
visible = false

[node name="should_save" type="AcceptDialog" parent="."]
title = "提示"
initial_position = 2
size = Vector2i(368, 100)
ok_button_text = "确定"
dialog_text = "当前节点集合还没有保存，是否保存？"

[node name="login" parent="." instance=ExtResource("3_o12v6")]
visible = false

[node name="message" parent="." instance=ExtResource("4_5aw54")]
position = Vector2i(470, 45)
visible = false

[node name="debug" type="PopupPanel" parent="."]
size = Vector2i(700, 600)

[node name="ScrollContainer" type="ScrollContainer" parent="debug"]
offset_left = 4.0
offset_top = 4.0
offset_right = 696.0
offset_bottom = 596.0

[node name="Label" type="RichTextLabel" parent="debug/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DebugWindow" parent="." instance=ExtResource("6_p231i")]
visible = false

[connection signal="pressed" from="VBoxContainer/HBoxContainer/doc" to="." method="_on_doc_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/debug" to="." method="_on_debug_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/mes" to="." method="_on_mes_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/online_message" to="." method="_on_online_message_pressed"]
[connection signal="selected" from="PopupPanel" to="." method="_on_graphe_pop_index_pressed"]
[connection signal="canceled" from="should_save" to="." method="_on_should_save_canceled"]
[connection signal="confirmed" from="should_save" to="." method="_on_should_save_confirmed"]
